chore: added test to validate registeredNode query
Signed-off-by: Manish Dait <daitmanish88@gmail.com>